--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,6 +1,6 @@
 :root {
-    --ThemeColor1: #f64c72;
-    --ThemeColor2: #242fa2;
+    --ThemeColor1: #1b1c20;
+    --ThemeColor2: #ec352e;
     --ComponentColor1: #4CF6D0;
     --ComponentColor2: #A29724;
 }
